# autoconf_sample

./: .gitignore  Doxyfile  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac
include/: Makefile.am  Makefile.in  example.hpp
main/: Makefile.am  Makefile.in  main.cc  main.cpp
scripts/: download_gtest.sh
src/: Makefile.am  Makefile.in  example.cpp
test/: Makefile.am  Makefile.in  gtest_example.cpp
